<resources>
    <string name="app_name">Implicit Intents</string>
    <string name="edittext_uri">https://developer.android.com</string>
    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="edittext_share">Twas brillig and the slithy toves</string>
    <string name="button_uri">Open Website</string>
    <string name="button_loc">Open Location</string>
    <string name="button_share">Share this text</string>
</resources>